# cyd-weather-clock

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/backlight/: CMakeLists.txt  Kconfig.projbuild  backlight.c  backlight.h
components/cyd_display/: CMakeLists.txt  Kconfig.projbuild  cyd_display.c  cyd_display.h
components/esp_lcd_st7796/: idf_component.yml
components/lv_porting/: lv_port_disp.c
components/weather/: CMakeLists.txt  Kconfig.projbuild  weather.c  weather.h
components/wifi_clock/: CMakeLists.txt  Kconfig.projbuild  wifi_clock.c  wifi_clock.h
main/: CMakeLists.txt  main.c
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_DS_Digital_46.c  ui_font_DS_Digital_84.c
main/ui/images/: ui_img_icon_01d_72p_png.c  ui_img_icon_01n_72p_png.c  ui_img_icon_02d_72p_png.c  ui_img_icon_02n_72p_png.c  ui_img_icon_03d_03n_72p_png.c  ui_img_icon_04d_04n_72p_png.c  ui_img_icon_09d_09n_72p_png.c  ui_img_icon_10d_72p_png.c  ui_img_icon_10n_72p_png.c  ui_img_icon_11d_11n_72p_png.c  ui_img_icon_13d_13n_72p_png.c  ui_img_icon_50d_50n_72p_png.c  ui_img_icon_auto_brightness_16p_png.c  ui_img_icon_first_quarter_32p_png.c  ui_img_icon_full_moon_32p_png.c  ui_img_icon_humd_22p_png.c  ui_img_icon_last_quarter_32p_png.c  ui_img_icon_location_11p_png.c  ui_img_icon_man_brightness_16p_png.c  ui_img_icon_max_11p_png.c  ui_img_icon_min_11p_png.c  ui_img_icon_new_moon_32p_png.c  ui_img_icon_pressure_11p_png.c  ui_img_icon_rain_11p_png.c  ui_img_icon_sun_32p_png.c  ui_img_icon_temp_22p_png.c  ui_img_icon_waning_crescent_32p_png.c  ui_img_icon_waning_gibbous_32p_png.c  ui_img_icon_waxing_crescent_32p_png.c  ui_img_icon_waxing_gibbous_32p_png.c  ui_img_icon_wifioff_24p_png.c  ui_img_icon_wifion_24p_png.c  ui_img_icon_wind_11p_png.c  ui_img_logo_png.c
main/ui/screens/: ui_Forecast.c  ui_Forecast.h  ui_Main.c  ui_Main.h  ui_Provision.c  ui_Provision.h  ui_Startup.c  ui_Startup.h
