SET(SOURCES screens/ui_Startup.c
    screens/ui_Main.c
    screens/ui_Forecast.c
    screens/ui_Provision.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_logo_png.c
    images/ui_img_icon_location_11p_png.c
    images/ui_img_icon_auto_brightness_16p_png.c
    images/ui_img_icon_sun_32p_png.c
    images/ui_img_icon_new_moon_32p_png.c
    images/ui_img_icon_01d_72p_png.c
    images/ui_img_icon_wifioff_24p_png.c
    images/ui_img_icon_temp_22p_png.c
    images/ui_img_icon_max_11p_png.c
    images/ui_img_icon_min_11p_png.c
    images/ui_img_icon_humd_22p_png.c
    images/ui_img_icon_wind_11p_png.c
    images/ui_img_icon_pressure_11p_png.c
    images/ui_img_icon_rain_11p_png.c
    images/ui_img_qr_png.c
    images/ui_img_icon_01n_72p_png.c
    images/ui_img_icon_02d_72p_png.c
    images/ui_img_icon_02n_72p_png.c
    images/ui_img_icon_03d_03n_72p_png.c
    images/ui_img_icon_04d_04n_72p_png.c
    images/ui_img_icon_09d_09n_72p_png.c
    images/ui_img_icon_10d_72p_png.c
    images/ui_img_icon_10n_72p_png.c
    images/ui_img_icon_11d_11n_72p_png.c
    images/ui_img_icon_13d_13n_72p_png.c
    images/ui_img_icon_50d_50n_72p_png.c
    images/ui_img_icon_first_quarter_32p_png.c
    images/ui_img_icon_full_moon_32p_png.c
    images/ui_img_icon_last_quarter_32p_png.c
    images/ui_img_icon_man_brightness_16p_png.c
    images/ui_img_icon_waning_crescent_32p_png.c
    images/ui_img_icon_waning_gibbous_32p_png.c
    images/ui_img_icon_waxing_crescent_32p_png.c
    images/ui_img_icon_waxing_gibbous_32p_png.c
    images/ui_img_icon_wifion_24p_png.c
    fonts/ui_font_DS_Digital_46.c
    fonts/ui_font_DS_Digital_84.c)

add_library(ui ${SOURCES})
